# cmake-study

01-hello-world/: CMakeLists.txt
01-hello-world/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
02-miniproject/: CMakeLists.txt  complex.h  main.cpp
02-miniproject/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
02-miniproject/build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MiniProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  demo.vcxproj  demo.vcxproj.filters
02-miniproject/build-vs/demo.dir/Debug/: demo.exe.recipe  demo.ilk
02-miniproject/build-vs/demo.dir/Debug/demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  demo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
02-miniproject/build-vs/demo.dir/Release/: demo.exe.recipe
02-miniproject/build-vs/demo.dir/Release/demo.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
02-miniproject/build-vs/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
02-miniproject/build-vs/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
02-miniproject/build-vs/x64/release/ALL_BUILD/: ALL_BUILD.recipe
02-miniproject/build-vs/x64/release/ZERO_CHECK/: ZERO_CHECK.recipe
02-miniproject/build-vs/x64/release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
03-miniproject-lib/: CMakeLists.txt  complex.cpp
03-miniproject-lib/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
03-miniproject-lib/build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ComplexProject.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  complex.vcxproj  complex.vcxproj.filters  demo.vcxproj  demo.vcxproj.filters
03-miniproject-lib/build-vs/Debug/: complex.lib
03-miniproject-lib/build-vs/complex.dir/Debug/complex.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
03-miniproject-lib/build-vs/demo.dir/Debug/: demo.exe.recipe  demo.ilk
03-miniproject-lib/build-vs/demo.dir/Debug/demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
03-miniproject-lib/build-vs/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
03-miniproject-lib/build-vs/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
03-miniproject-lib/build-vs/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
04-Variable/: CMakeLists.txt  总结.docx
04-Variable/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
04-Variable/build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  VariableLesson.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
05-控制流程/: cmake控制流程.docx
06-function/: CMakeLists.txt  cmake函数.docx  总结.docx
06-function/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
07-command/: CMakelists.txt  常见命令和生成式表达式.docx
07-command/build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake  generatorExample.txt  generatorExample1.txt  generatorExample2.txt
08-myproject/: CMakeLists.txt  config.h.in  main.cpp
08-myproject/Shape/: CMakelists.txt
08-myproject/Shape/include/: Circle.h  Rectangle.h  Shape.h
08-myproject/Shape/src/: Circle.cpp  Rectangle.cpp
09-thirdparty/httplib/: CMakeLists.txt
10-vcpkg/: CMakeLists.txt  CMakePresets.json
